@@ -1,3 +1,14 @@
+2004-10-12  Paolo Carlini  <pcarlini@suse.de>
+
+	PR libstdc++/17948
+	* include/bits/stl_tree.h (erase(iterator, iterator)): Revert
+	wrong commit of 2004-10-07.
+	
+2004-10-12  Scott Snyder  <snyder@fnal.gov>
+
+	PR libstdc++/17948
+	* testsuite/23_containers/set/modifiers/17948.cc: New.
+
 2004-10-11  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/stl_deque.h: Correct for over-long lines.
